# llvm

./: CMakeLists.txt  main  main.cpp  main.ll  main.tb
src/: bison.ypp  flex.lex
src/alloc/: alloc.cpp  alloc.hpp
src/astTree/: astTree.cpp  astTree.hpp
src/expression/: binaryExpr.cpp  error.cpp  expr.cpp  expr.hpp  funcCallExpr.cpp  idExrp.cpp  literalExpr.cpp  unaryExpr.cpp
src/statement/: FunctionProtorypeStatement.cpp  FunctionStatement.cpp  assignStatement.cpp  declareAndAssign.cpp  exprStatement.cpp  forStatement.cpp  ifStatement.cpp  printStatement.cpp  statement.cpp  statement.hpp  varStatement.cpp  whileStatement.cpp
